cabal-version:      2.4
name:               taffybar-solomon
version:            0.1.0.0
description:        My taffybar config
author:             solomon
maintainer:         ssbothwell@gmail.com

executable taffybar-solomon
  main-is:          taffybar.hs
  build-depends:    base > 2 && < 5
                  , taffybar-solomon
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

library
  exposed-modules:  App
                  -- , Watcher
  build-depends:    base
                  -- , X11
                  -- , bytestring
                  -- , containers
                  -- , directory
                  , dbus
                  , dbus-hslogger
                  -- , filepath
                  -- , gi-gtk
                  -- , gtk-sni-tray
                  -- , gtk-strut
                  -- , haskell-gi-base
                  -- , hostname
                  , hslogger
                  , optparse-applicative
                  -- , process
                  -- , split
                  , status-notifier-item
                  -- , text
                  -- , time
                  , taffybar>=3.2.0
                  -- , transformers
                  -- , xdg-basedir
  hs-source-dirs:   src
  default-language: Haskell2010