cabal-version:      2.4
name:               xmobar-solomon
version:            0.1.0.0
synopsis:
homepage:
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
category:           System
extra-source-files: CHANGELOG.md

executable xmobar-solomon
  main-is:          Main.hs
  build-depends:    base ^>=4.14.1.0
                  , xmobar-solomon
                  , xmobar
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts

library
  exposed-modules:  App
                  , App.Acpi
                  , App.DunstStatus
                  , App.Icons
  build-depends:    base ^>=4.14.1.0
                  , extra
                  , font-awesome-type
                  , process
                  , xmobar
                  , time
  ghc-options:      -threaded -Wall -O2 -Wno-trustworthy-safe -Wno-star-is-type
  hs-source-dirs:   src
  default-language: Haskell2010
